[package]
name = "ttalgi"
version = "0.2.0"
authors = ["Martí Guasch <0x4c44@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
unicorn-engine = "2.0.1"


[dependencies.keystone]
git = "https://github.com/keystone-engine/keystone"
rev = "2a611d9a8c18c08cdf0439ae428146476c4385a7"  # latest master as of 2023/06/05
