[package]
name = "ttalgi"
version = "0.2.0"
authors = ["Martí Guasch <0x4c44@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
console = "0.15.7"
unicorn-engine = "2.0.1"
keystone-engine = "0.1.0"
